# agentic-hr-assistant-system

./: .env.example  .gitignore  AI_SERVICE_GUIDE.md  DEPLOYMENT_GUIDE.md  FREE_SETUP.md  MANUAL_TEST_CHECKLIST.md  README.md  TEST.md  TESTING_GUIDE.md  alembic.ini  dashboard.html  dashboard.js  docker-compose.yml  free_startup_check.py  init_db.py  login.html  pyproject.toml  quick_test.py  requirements.txt  requirements_free.txt  simple_test.ps1  start_dashboard.py  start_mvp.py  startup_check.py  test_db.py  test_ollama.py  test_system.ps1  test_system.py
docker/: Dockerfile
docker/init-scripts/: 01-create-schemas.sh
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_interview_tables.py
src/: __init__.py  main.py
src/api/: applications.py  candidates.py  dashboard.py  demo.py  jobs.py
src/api/auth/: __init__.py  dependencies.py
src/core/: config.py  database.py  database_sync.py  exceptions.py  rbac.py  security.py
src/models/: __init__.py  application.py  candidate.py  document.py  interview.py  job.py  user.py
src/services/: __init__.py  claude_service.py  claude_service_free.py  document_service.py  file_service.py  free_ai_service.py  free_file_service.py  gdpr_service.py  ollama_service.py  opensource_ai_service.py
tests/: conftest.py  test_candidates.py
